--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "https://and-dekker.github.io/docker-101/"
+languageCode = "en-gb"
+title = "Docker 101"
